# the-watchman

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  config.toml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: admin.py  ask.py  health.py  mcp.py
app/models/: schemas.py
app/utils/: comfy_inventory.py  config.py  embedding.py  helpers.py  neo4j_client.py
docs/: ArchitecturePhase1.md  CICD_IMPLEMENTATION_PLAN.md  CI_CD_SETUP.md  comfy_ui_inventory.md  implement.md
docs/domains/: README.md  file_ingest_documents.md  file_ingest_exports.md  file_ingest_implementation.md  file_ingest_migration.md
docs/evaluation/: ACTION_PLAN.md  WATCHMAN_VS_MIRIX_ANALYSIS.md
docs/observability/: logging.md
docs/review/: review.md
docs/unified/: architecture.md  distributed_architecture.md  mcp_management.md  privacy.md  smart_capture.md  system_management.md  testing.md  troubleshooting.md
docs/vision/: OtherDescription.md
domains/agent_interface/: intent_classifier.py  parameter_extractor.py  query_builder.py
domains/file_ingest/: __init__.py
domains/file_ingest/collectors/: __init__.py
domains/file_ingest/processors/: __init__.py
domains/memory_change/watchers/: filesystem.py
domains/system_graph/scanners/: docker.py  projects.py
domains/visual_timeline/: capture.py  ocr.py
examples/: query_pipeline_demo.py
schemas/: contracts.cypher
scripts/: comfy_inventory_watcher.py  init_schema.py
tasks/: Task1.md
tests/service/: test_docker_scanner.py
tests/unit/: test_agent_interface_integration.py  test_comfy_inventory_watcher.py  test_intent_classifier.py  test_parameter_extractor.py  test_query_builder.py
